--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,41 +1,22 @@
 {
     "version": "2.0.0",
     "tasks": [
-        {
-            "label": "build",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "build"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "godot",
-            "command": "godot",
-            "args": ["--debugger-agent=transport=dt_socket,address=127.0.0.1:23685,server=n,suspend=y"],
-            "type": "process",
-            "problemMatcher": [
-                {
-                    "pattern": [
-                        {
-                            "regexp": ".",
-                            "file": 1,
-                            "location": 2,
-                            "message": 3
-                        }
-                    ],
-                    "background": {
-                        "activeOnStart": true,
-                        "beginsPattern": ".",
-                        "endsPattern": "."
-                    }
-                }
-            ],
-            "isBackground": true,
-            "dependsOn": [
-                "build"
-            ]
+      {
+        "label": "build",
+        "command": "dotnet",
+        "type": "process",
+        "args": [
+          "build"
+        ],
+        "problemMatcher": "$msCompile",
+        "presentation": {
+          "echo": true,
+          "reveal": "silent",
+          "focus": false,
+          "panel": "shared",
+          "showReuseMessage": true,
+          "clear": false
         }
+      }
     ]
-}
+  }
