--- a/World.csproj
+++ b/World.csproj
@@ -8,6 +8,10 @@
     <NoWarn>8625</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RelEcs.dll" />
+    <PackageReference Include="Arch" Version="1.2.6" />
+    <PackageReference Include="Arch.EventBus" Version="1.0.2" />
+    <PackageReference Include="Arch.LowLevel" Version="1.0.2" />
+    <PackageReference Include="Arch.System" Version="1.0.2" />
+    <PackageReference Include="Arch.System.SourceGenerator" Version="1.1.0" />
   </ItemGroup>
 </Project>
